# evalloop

./: .gitignore  FEEDBACK.md  README.md  pyproject.toml
.github/workflows/: publish.yml
evalloop/: __init__.py  _utils.py  baseline.py  capture.py  cli.py  db.py  defaults.py  scorer.py
tests/: golden_set.py  test_baseline.py  test_capture.py  test_cli_init.py  test_cli_rescore.py  test_defaults.py  test_scorer.py
