[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalloop"
version = "0.1.0"
description = "Closed-loop eval monitoring for LLM-powered products"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "yoyo-migrations>=8.2.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
evalloop = "evalloop.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
